# WebAEE

./: .env  GUIA.md  aee_prd_final.md  aee_tree_of_thought.md  apresentacao.html  caso_de_uso.md  conversa_aee_arquitetura.md  conversa_aee_sessao2.md  docker-compose.yml  meta_submissao.md  package-lock.json  pytest_out.txt  pytest_out_utf8.txt  pytest_output.txt  roteiro_apresentacao.md  skills-lock.json
backend/: .coverage  .dockerignore  Dockerfile  alembic.ini  conftest.py  dev.db  fix_tests.py  pyproject.toml  seed_reset.sql  test_all_endpoints.py  test_create_template.py  test_db.py  test_enum.py  update_pass.sql  update_pass_admin.sql
backend/alembic/: env.py
backend/alembic/versions/: 0e978eb56976_refactor_report_templates.py  a1b2c3d4e5f6_add_admin_role.py  b7d8c9a0e1f2_add_escola_id_to_user.py  e6630838985b_add_schedules_table.py  ef9a0507274f_initial_schema.py  f1a2b3c4d5e6_add_apoio_aee_notifications.py
backend/app/: __init__.py  main.py
backend/app/application/: __init__.py
backend/app/domain/: __init__.py  exceptions.py  models.py  models_enums.py
backend/app/infrastructure/: database.py  rate_limit.py  unit_of_work_impl.py
backend/app/interfaces/: api_router.py  dependencies.py
backend/docs/: architecture_backend_aee.md  presentation_backend_aee.md
backend/scripts/: init_db.sql  migrate_routers_uow.py  migrate_use_cases_uow.py  rls_policies.sql
backend/tests/: __init__.py
backend/tests/application/: conftest.py  test_accept_invite.py  test_add_comment.py  test_archive_student.py  test_assign_professor.py  test_create_report.py  test_create_school.py  test_create_student.py  test_create_user.py  test_photos.py  test_sync_report.py  test_transfer_student.py  test_use_cases_extra.py  test_user_queries.py
backend/tests/domain/: __init__.py  test_models.py
backend/tests/integration/: conftest.py  test_extra_coverage.py  test_multi_tenant_api.py  test_photos_api.py  test_reports_api.py  test_routers_edge.py  test_routers_extra.py  (+3 more)
(+248 files in other folders)
