[project]
name = "sistema-aee"
version = "0.1.0"
description = "Sistema de Gestão do Atendimento Educacional Especializado"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]>=0.115",
    "sqlmodel>=0.0.21",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "alembic>=1.13",
    "asyncpg>=0.29",          # driver async para PostgreSQL
    "python-jose[cryptography]>=3.3",  # JWT
    "passlib[bcrypt]>=1.7",   # hashing de senha
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",            # cliente HTTP para testes de API
    "ruff>=0.4",
    "mypy>=1.10",
    "sqlalchemy[mypy]>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short --strict-markers -q"
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
# Comandos de cobertura:
#   Terminal:  docker exec aee_api python -m pytest --cov=app --cov-report=term-missing
#   HTML:      docker exec aee_api python -m pytest --cov=app --cov-report=html:htmlcov

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "PT"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
